--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-
+albumentations==1.3.1
+easydict==1.13
+Markdown==3.3.7
+matplotlib==3.2.2
+numpy==1.21.6
+opencv-python==4.12.0.88
+pandas==1.3.5
 Pillow==5.3.0
-scipy==1.1.0
-wget==3.2
+protobuf==4.21.8
+scikit-image==0.18.3
+scikit-learn==1.0.2
+scipy==1.7.3
 seaborn==0.9.0
-opencv-python
-scikit-image
+tensorflow-gpu==2.10.0
+tqdm==4.67.1
+wget==3.2
